--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
 body, html {
     margin: 0;
     padding: 0;
+    background-image: url('./red-grunge-background.jpg');
+  }
+
+  .heading{
+    width: 100%;
+    height: 54px;
+    text-align: center;
+    font-weight: 100;
+    color: #99ff99;
   }
   
   /* Center the calculator on the page */
@@ -10,16 +19,22 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    border: 3px solid black;
+    margin: 50px 500px ;
+    padding: 20px;
+    border-radius: 10px;
+    background-image: url('./vivid-blurred-colorful-background.jpg');
   }
   
   /* Style the input field */
   .input {
-    width: 100%;
+    margin-left:40px ;
+    width: 65%;
     height: 50px;
     font-size: 24px;
     padding: 10px;
     margin-bottom: 20px;
+    border-radius: 9px;
   }
   
   /* Style the calculator buttons */
@@ -28,7 +43,7 @@ body, html {
     height: 50px;
     font-size: 20px;
     margin: 5px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     background-color: #f0f0f0;
     cursor: pointer;
   }
